testando a consulta de documentos

--- a/nuxeo-test/nuxeo-test1/src/main/resources/web/nuxeo.war/test/test.xhtml
+++ b/nuxeo-test/nuxeo-test1/src/main/resources/web/nuxeo.war/test/test.xhtml
@@ -10,7 +10,7 @@
 	<h:form prependId="false">
 		<br />
 		<br />
-		<h:outputText value="#{messages['label.test.message']}" /> :
+		<h:outputText value="#{messages['label.test1.message']}" /> :
 		<h:inputText id="txMessage" value="#{testBean.message}">
 			<a4j:support event="onblur" reRender="lbMessage" />
 		</h:inputText>
