--- a/nuxeo-test/nuxeo-test2/src/main/resources/web/nuxeo.war/test2/test2.xhtml
+++ b/nuxeo-test/nuxeo-test2/src/main/resources/web/nuxeo.war/test2/test2.xhtml
@@ -1,62 +1,71 @@
 <?xml version="1.0" encoding="iso-8859-1"?>
-<div xmlns:a4j="https://ajax4jsf.dev.java.net/ajax"
-	xmlns:rich="http://richfaces.org/rich"
-	xmlns:h="http://java.sun.com/jsf/html"
+<nxthemes:composition
+	xmlns="http://www.w3.org/1999/xhtml"
+ 	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:f="http://java.sun.com/jsf/core"
 	xmlns:ui="http://java.sun.com/jsf/facelets"
+	xmlns:a4j="https://ajax4jsf.dev.java.net/ajax"
+	xmlns:rich="http://richfaces.org/rich"
+	xmlns:s="http://jboss.com/products/seam/taglib"
 	xmlns:nxu="http://nuxeo.org/nxweb/util"
-	xmlns:s="http://jboss.com/products/seam/taglib">
+	xmlns:nxthemes="http://nuxeo.org/nxthemes">
 
-	<h:form prependId="false">
-		<table style="width: 500px; margin: auto;">
-			<tr>
-				<td style="width: 20%;">
-					<h:outputText value="#{messages['label.test2.type']}" /> :
-				</td>
-				<td style="width: 80%;">
-					<h:selectOneMenu value="#{documentSearchBean.type}">
-						<f:selectItem itemLabel="File" itemValue="File" />
-						<f:selectItem itemLabel="Folder" itemValue="Folder" />
-					</h:selectOneMenu>
-				</td>
-			</tr>
-			<tr>
-				<td>
-					<h:outputText value="#{messages['label.test2.name']}" /> :
-				</td>
-				<td>
-					<h:inputText value="#{documentSearchBean.filter}" size="40" />
-				</td>
-			</tr>
-		</table>
-		<div style="text-align: center;">
-			<a4j:commandButton value="${messages['label.test2.search']}" action="#{documentSearchBean.search}" reRender="panelDocument" />
-		</div>
-		<a4j:outputPanel id="panelDocument">
-			<rich:dataTable rows="#{utilBean.rows}" value="#{documentSearchBean.dataModel}" var="document" style="width: 600px; margin: auto;" rendered="#{not empty documentSearchBean.dataModel}">
-				<rich:column>
-					<f:facet name="header">
-						<h:outputText value="#{messages['label.test2.name']}" />
-					</f:facet>
-					<h:outputText value="#{document.title}" />
-				</rich:column>
-				<rich:column>
-					<f:facet name="header">
-						<h:outputText value="#{messages['label.test2.path']}" />
-					</f:facet>
-					<h:outputText value="#{document.pathAsString}" />
-				</rich:column>
-				<rich:column>
-					<f:facet name="header">
-						<h:outputText value="#{messages['label.test2.type']}" />
-					</f:facet>
-					<h:outputText value="#{document.type}" />
-				</rich:column>
-				<f:facet name="footer">
-					<rich:datascroller maxPages="5" />
-				</f:facet>
-			</rich:dataTable>
-		</a4j:outputPanel>
-	</h:form>
+	<ui:define name="page title">
+		<h:outputText value="#{messages['label.test2.title']}" />
+	</ui:define>
 
-</div>
+	<ui:define name="body">
+		<h:form prependId="false">
+			<table style="width: 500px; margin: auto;">
+				<tr>
+					<td style="width: 20%;">
+						<h:outputText value="#{messages['label.test2.type']}" /> :
+					</td>
+					<td style="width: 80%;">
+						<h:selectOneMenu value="#{documentSearchBean.type}">
+							<f:selectItem itemLabel="File" itemValue="File" />
+							<f:selectItem itemLabel="Folder" itemValue="Folder" />
+						</h:selectOneMenu>
+					</td>
+				</tr>
+				<tr>
+					<td>
+						<h:outputText value="#{messages['label.test2.name']}" /> :
+					</td>
+					<td>
+						<h:inputText value="#{documentSearchBean.filter}" size="40" />
+					</td>
+				</tr>
+			</table>
+			<div style="text-align: center;">
+				<a4j:commandButton value="${messages['label.test2.search']}" action="#{documentSearchBean.search}" reRender="panelDocument" />
+			</div>
+			<a4j:outputPanel id="panelDocument">
+				<rich:dataTable rows="#{utilBean.rows}" value="#{documentSearchBean.dataModel}" var="document" style="width: 600px; margin: auto;" rendered="#{not empty documentSearchBean.dataModel}">
+					<rich:column>
+						<f:facet name="header">
+							<h:outputText value="#{messages['label.test2.name']}" />
+						</f:facet>
+						<h:outputText value="#{document.title}" />
+					</rich:column>
+					<rich:column>
+						<f:facet name="header">
+							<h:outputText value="#{messages['label.test2.path']}" />
+						</f:facet>
+						<h:outputText value="#{document.pathAsString}" />
+					</rich:column>
+					<rich:column>
+						<f:facet name="header">
+							<h:outputText value="#{messages['label.test2.type']}" />
+						</f:facet>
+						<h:outputText value="#{document.type}" />
+					</rich:column>
+					<f:facet name="footer">
+						<rich:datascroller maxPages="5" />
+					</f:facet>
+				</rich:dataTable>
+			</a4j:outputPanel>
+		</h:form>
+	</ui:define>
+
+</nxthemes:composition>
