--- a/nuxeo-test/nuxeo-test2/src/main/resources/web/nuxeo.war/test2/test2.xhtml
+++ b/nuxeo-test/nuxeo-test2/src/main/resources/web/nuxeo.war/test2/test2.xhtml
@@ -16,30 +16,38 @@
 
 	<ui:define name="body">
 		<h:form prependId="false">
-			<table style="width: 500px; margin: auto;">
-				<tr>
-					<td style="width: 20%;">
-						<h:outputText value="#{messages['label.test2.type']}" /> :
-					</td>
-					<td style="width: 80%;">
-						<h:selectOneMenu value="#{documentSearchBean.type}">
-							<f:selectItem itemLabel="File" itemValue="File" />
-							<f:selectItem itemLabel="Folder" itemValue="Folder" />
-						</h:selectOneMenu>
-					</td>
-				</tr>
-				<tr>
-					<td>
-						<h:outputText value="#{messages['label.test2.name']}" /> :
-					</td>
-					<td>
-						<h:inputText value="#{documentSearchBean.filter}" size="40" />
-					</td>
-				</tr>
-			</table>
-			<div style="text-align: center;">
-				<a4j:commandButton value="${messages['label.test2.search']}" action="#{documentSearchBean.search}" reRender="panelDocument" />
-			</div>
+			<rich:panel style="width: 500px; margin: auto;">
+				<f:facet name="header">
+					<h:outputText value="#{messages['label.test2.title']}" />
+				</f:facet>
+				<table style="width: 100%;">
+					<tr>
+						<td style="width: 20%;">
+							<h:outputText value="#{messages['label.test2.type']}" /> :
+						</td>
+						<td style="width: 80%;">
+							<h:selectOneMenu value="#{documentSearchBean.type}">
+								<f:selectItem itemLabel="File" itemValue="File" />
+								<f:selectItem itemLabel="Folder" itemValue="Folder" />
+							</h:selectOneMenu>
+						</td>
+					</tr>
+					<tr>
+						<td>
+							<h:outputText value="#{messages['label.test2.name']}" /> :
+						</td>
+						<td>
+							<h:inputText value="#{documentSearchBean.filter}" size="40" />
+						</td>
+					</tr>
+					<tr>
+						<td style="text-align: center;" colspan="2">
+							<a4j:commandButton value="${messages['label.test2.search']}" action="#{documentSearchBean.search}" reRender="panelDocument" />
+						</td>
+					</tr>
+				</table>
+			</rich:panel>
+			<br />
 			<a4j:outputPanel id="panelDocument">
 				<rich:dataTable rows="#{utilBean.rows}" value="#{documentSearchBean.dataModel}" var="document" style="width: 600px; margin: auto;" rendered="#{not empty documentSearchBean.dataModel}">
 					<rich:column>
